--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Portfolio Website</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
 </head>
-<body>
-    Hello World
+
+<body class="open-sans-normal ">
+    <header class="header secondary_bg">
+        <nav>
+            <h3 class="nav_title">Ma<span class="text_primary">r</span>y</h3>
+            <ul>
+                <li><a class="dark-2" href="">Portfolio</a></li>
+                <li><a class="dark-2" href="">Blog</a></li>
+                <li><a href=""><button class="btn_primary">Hire Me</button></a></li>
+            </ul>
+        </nav>
+        <div class="banner">
+            <div class="banner_content">
+                <h4 class="banner_greeting dark-2">Hi I am</h4>
+                <h1 class="banner_title">Marry Hardy</h1>
+                <p class="banner_description">
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                </p>
+                <button class="btn_primary">Download CV</button>
+                <button class="btn_primary">Contact</button>
+            </div>
+            <img class="banner_profile_pic" src="images/hardy.png" alt="">
+        </div>
+    </header>
+    <main>
+        <section class="about secondary_bg">
+            <h3 class="sestion_title">About Me</h3>
+            <p class="section_description">
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+            </p>
+            <div class="about_items">
+                <div class="about_item">
+                    <p class="item_title">name</p>
+                    <p class="item_description">Mary Hardy</p>
+                </div>
+                <div class="about_item">
+                    <p class="item_title">Email</p>
+                    <p class="item_description">abc@.com</p>
+                </div>
+                <div class="about_item">
+                    <p class="item_title">Date of Birth</p>
+                    <p class="item_description">nov 20, 2004</p>
+                </div>
+                <div class="about_item">
+                    <p class="item_title">From</p>
+                    <p class="item_description">Barishal</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
+
 </html>
