--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <h4 class="banner_greeting dark-2">Hi I am</h4>
                 <h1 class="banner_title">Marry Hardy</h1>
                 <p class="banner_description">
-                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.
+                    Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved moments.
                 </p>
                 <button class="btn_primary">Download CV</button>
                 <button class="btn_primary">Contact</button>
@@ -35,7 +36,10 @@
         <section class="about secondary_bg">
             <h3 class="sestion_title">About Me</h3>
             <p class="section_description">
-                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+                I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.
             </p>
             <div class="about_items">
                 <div class="about_item">
@@ -53,6 +57,43 @@
                 <div class="about_item">
                     <p class="item_title">From</p>
                     <p class="item_description">Barishal</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- What is do  section start -->
+        <section class="skills">
+            <h3 class="section_title text_center">What I do</h3>
+            <p class="section_description text_center">I have more than 10 years experience building software for
+                clients all over the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio.</p>
+
+            <div class="skills_container">
+                <!-- .skill*4>img+h4.skill_title+p.skill_descripton -->
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h4 class="skill_title">Vanilla JavaScript</h4>
+                    <p class="skill_descripton">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h4 class="skill_title">React</h4>
+                    <p class="skill_descripton">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h4 class="skill_title">Node.js</h4>
+                    <p class="skill_descripton">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h4 class="skill_title">Mongodb</h4>
+                    <p class="skill_descripton">List skill/technologies here. You can change the icon above to any of
+                        the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
             </div>
         </section>
