--- a/index.html
+++ b/index.html
@@ -97,9 +97,94 @@
                 </div>
             </div>
         </section>
-    </main>
-    <footer>
 
+        <!-- Section Resume-->
+        <section class="resume">
+            <h3 class="section_title text_center">A summary of My Resume</h3>
+            <div class="resume_container">
+                <!-- .resume_colume*2>h3.resume_column_title+.experience*3>h4.experience_title+h5.experience_sub_title+p.experience_description -->
+                <div class="resume_colume">
+                    <h3 class="resume_column_title">My Education</h3>
+                    <div class="experience">
+                        <h4 class="experience_title">Master in Computer Engineering</h4>
+                        <h5 class="experience_sub_title">Harvard University / 2015 - 2017</h5>
+                        <p class="experience_description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience_title">Master in Computer Engineering</h4>
+                        <h5 class="experience_sub_title">Harvard University / 2015 - 2017</h5>
+                        <p class="experience_description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience_title">Master in Computer Engineering</h4>
+                        <h5 class="experience_sub_title">Harvard University / 2015 - 2017</h5>
+                        <p class="experience_description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+                <div class="resume_colume">
+                    <h3 class="resume_column_title">My Experience</h3>
+                    <div class="experience">
+                        <h4 class="experience_title">Sr. Font End Developer</h4>
+                        <h5 class="experience_sub_title">Apple Inc / 2020 - Current</h5>
+                        <p class="experience_description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience_title">Jr. Font End Developer</h4>
+                        <h5 class="experience_sub_title">Dribbble Inc / 2018 - 2022</h5>
+                        <p class="experience_description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="experience">
+                        <h4 class="experience_title">HTML Developer</h4>
+                        <h5 class="experience_sub_title">Adobe Inc / 2017 - 2018</h5>
+                        <p class="experience_description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="text_center resume_download_cv">
+                <button class="btn_primary">Download CV</button>
+            </div>
+        </section>
+    </main>
+    <footer class="secondary_bg">
+        <div class="footer_column">
+            <h3 class="section_title">Lets Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                Monday through Friday.</p>
+
+            <div>
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer_column">
+            <h3 class="footer_title">Let’s Message me</h3>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name">
+
+                <input type="email" name="" id="" placeholder="Your Email">
+
+                <textarea name="" id="" placeholder="Your Message" cols="30" rows="3"></textarea>
+
+                <input class="btn_primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 
